# ZERO-CODE-CNC

./: .gitignore  CMakeLists.txt  README.md  dark_mode.qss  dxf2svg.py  main.cpp  mainwindow.cpp  mainwindow.h  modern_cnc_dark.ui
src/: 123-5.stp  20260130.STEP  6666.NC  code.ui  sj-1.dxf  sss.NC  sss_T.NC  展示样品(3).dxf  展示样品.NC  展示样品111.dxf  展示样品123(1).dxf
